[package]
name = "literium"
version = "0.1.0"
authors = ["Kayo Phoenix <kayo@illumium.org>"]

[dependencies]
log = "0.4"
base64 = "0.9"
bytes = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_with = "0.2"
toml = "0.4"
http = "0.1"
url = "1"
mime = "0.3"
sodiumoxide = "0.1"
futures = "0.1"
tokio = "0.1"
supercow = "0.1"
warp = "0.1"

[dev-dependencies]
pretty_env_logger = "0.2"

[features]
default = ["native_auth"]
native_auth = []
oauth2_auth = []
