[package]
name = "literium"
version = "0.1.0"
authors = ["Kayo Phoenix <kayo@illumium.org>"]

[dependencies]
log = "0.4"
base64 = "0.9"
bytes = "0.4"
time = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_with = "0.2"
serde_qs = "0.4"
toml = "0.4"
http = "0.1"
url = "1"
url_serde = "0.2"
mime = "0.3"
sodiumoxide = "0.1"
futures = "0.1"
tokio = "0.1"
supercow = "0.1"
warp = "0.1"
imagesize = "0.6"
magic = "0.12"
new-tokio-smtp = { version = "0.8", optional = true }
emailmessage = { version = "0.2", optional = true, features = ["serde"] }
hyper = { version = "0.12", optional = true }
native-tls = { version = "0.2", optional = true }
hyper-tls = { version = "0.3", optional = true }
trust-dns-resolver = { version = "0.10", optional = true }

[dev-dependencies]
pretty_env_logger = "0.2"

[features]
default = ["send_mail", "name_resolver", "http_client", "native_auth", "otpass_auth", "oauth2_auth"]
auth = []
native_auth = ["auth"]
otpass_auth = ["auth"]
oauth2_auth = ["auth", "http_client"]
name_resolver = ["trust-dns-resolver"]
http_client = ["hyper", "native-tls", "hyper-tls", "name_resolver"]
send_mail = ["emailmessage", "new-tokio-smtp"]
